--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular/animations": "^15.0.0",
     "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
+    "@angular/compiler": "15.2.9",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
@@ -31,9 +31,9 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.1",
-    "@angular/cli": "~15.0.1",
-    "@angular/compiler-cli": "^15.0.0",
+    "@angular-devkit/build-angular": "15.2.8",
+    "@angular/cli": "~15.2.8",
+    "@angular/compiler-cli": "^15.2.9",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
