--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,12 @@
 {
   "hosting": {
-    "public": "dist/mkelektroplanung-gmb-h/",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
     "rewrites": [
-      {
-        "source": "/public/**",
-        "destination": "/index.html"
-      },
       {
         "source": "**",
         "destination": "/index.html"
